fixed open and close buttons to work with high contrast

--- a/server/src/sass/components/map/_map.scss
+++ b/server/src/sass/components/map/_map.scss
@@ -159,6 +159,7 @@
 // Map controls - open key
 .defra-map__open-key {
   float:left;
+  position:relative;
   margin-left:5px;
   margin-top:10px;
   height:40px;
@@ -171,23 +172,22 @@
   font-size:16px;
   line-height:40px;
   text-indent: -5000px;
-  background-image: svg-url('<svg width="18" height="17" viewBox="0 0 18 17"><path d="M16.215,9.81L18,11L9,17L0,11L1.785,9.81L8.945,14.583C8.978,14.606 9.022,14.606 9.055,14.583L16.215,9.81Z" style="fill:#0b0c0c;"/><path d="M9,0L0,6L9,12L18,6L9,0ZM9,2.38L14.43,6L9,9.62L3.57,6L9,2.38Z" style="fill:#0b0c0c;"/></svg>');
-  background-size: 18px 17px;
-  background-position: 11px 11.5px;
-  background-repeat: no-repeat;
+  color: govuk-colour('black');
   @include mq ($from: desktop) {
     display: none;
   }
+  svg {
+    display: block;
+    margin:10px;
+  }
   &:hover {
-    background-color:$govuk-border-colour;
+    background-color: govuk-colour('light-grey');
   }
   &:focus {
     outline: none;
   }
-  &:focus[keyboard-focus] {
-    background-color: $govuk-focus-colour;
-    background-image: svg-url('<svg width="18" height="17" viewBox="0 0 18 17" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M16.125,9.75l1.875,1.25l-9,6l-9,-6l1.875,-1.25l7.125,4.75l7.125,-4.75" style="fill:#0b0c0c;"/><path d="M9,0l-9,6l9,6l9,-6l-9,-6Zm0,2.5l-5.25,3.5l5.25,3.5l5.25,-3.5l-5.25,-3.5Z" style="fill:#0b0c0c;"/></svg>');
-    color: $govuk-text-colour;
+  &:focus[keyboard-focus]:after {
+    @include focus;
   }
   &::-moz-focus-inner {
     border: 0;
@@ -295,20 +295,19 @@
   border:0;
   cursor:pointer;
   background-color: #ffffff;
-  background-image: svg-url('<svg width="14" height="14" viewBox="0 0 14 14"><path d="M7,5.6L12.6,0L14,1.4L8.4,7L14,12.6L12.6,14L7,8.4L1.4,14L0,12.6L5.6,7L0,1.4L1.4,0L7,5.6Z" style="fill:#0b0c0c;stroke:#0b0c0c;stroke-width:0.1px"/></svg>');
-  background-size: 14px;
-  background-position: 13px;
-  background-repeat: no-repeat;
-  color: white;
-  text-indent:-5000px;
+  color: govuk-colour('black');
+  svg {
+    display:block;
+    margin: 10px;
+  }
   &:hover {
-    background-color: govuk-colour('mid-grey');
+    background-color: govuk-colour('light-grey');
   }
   &:focus {
-    outline:none;
+    outline: none;
   }
-  &:focus[keyboard-focus] {
-    background-color: $govuk-focus-colour;
+  &:focus[keyboard-focus]:after {
+    @include focus;
   }
   &::-moz-focus-inner {
     border: 0;
@@ -484,28 +483,27 @@
 }
 .defra-map-info__close {
   position:absolute;
-  top:0px;
-  right:0px;
+  top:3px;
+  right:3px;
   width:40px;
   height:40px;
   padding:0;
   border:0;
   cursor:pointer;
   background-color: #ffffff;
-  background-image: svg-url('<svg width="14" height="14" viewBox="0 0 14 14"><path d="M7,5.6L12.6,0L14,1.4L8.4,7L14,12.6L12.6,14L7,8.4L1.4,14L0,12.6L5.6,7L0,1.4L1.4,0L7,5.6Z" style="fill:#0b0c0c;stroke:#0b0c0c;stroke-width:0.1px"/></svg>');
-  background-size: 14px;
-  background-position: 13px;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  text-indent: -5000px;
+  color: govuk-colour('black');
+  svg {
+    display: block;
+    margin: 10px;
+  }
   &:hover {
-    background-color: govuk-colour('mid-grey');
+    background-color: govuk-colour('light-grey');
   }
   &:focus {
-    outline:none;
+    outline: none;
   }
-  &:focus[keyboard-focus] {
-    background-color: $govuk-focus-colour;
+  &:focus[keyboard-focus]:after {
+    @include focus;
   }
   &::-moz-focus-inner {
     border: 0;
